removed vendor folder

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>One Page Wonder - Start Bootstrap Template</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
   <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
@@ -63,7 +63,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
           <div class="p-5">
-            <img class="img-fluid rounded-circle" src="img/03.jpg" alt="">
+            <img class="img-fluid rounded-circle" src="images/03.jpg" alt="">
           </div>
         </div>
         <div class="col-lg-6 order-lg-1">
@@ -81,7 +81,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6">
           <div class="p-5">
-            <img class="img-fluid rounded-circle" src="img/02.jpg" alt="">
+            <img class="img-fluid rounded-circle" src="images/02.jpg" alt="">
           </div>
         </div>
         <div class="col-lg-6">
@@ -97,7 +97,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-black">
     <div class="container">
-      <p class="m-0 text-center text-white small">Phillip Brule &amp; Richard Xiong &copy; 2012</p>
+      <p class="m-0 text-center text-white small">Phillip Brule &amp; Richard Xiong &copy; 2020</p>
       <p class="m-0 text-center small">We obtained this Free Bootstrap Template from <a href="https://startbootstrap.com/themes/">startboostrap.com</a> </p>
       <p class="m-0 text-center small">None of the main bootstrap and css classes were written by us, we only made the necessary modifications so that it would match our project</p>
     </div>
@@ -105,8 +105,8 @@
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="jquery/jquery.min.js"></script>
+  <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
